# Bedrock

./: .gitignore  BENCHMARKS.md  EXECUTION_SPEC.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC-v0.2.md  SPEC.md  build.sh  go.work  main.go
ControlPlane/: .golangci.yml  Makefile  README.md  buf.yaml  go.mod  go.sum  tools.go
ControlPlane/cmd/bedrockd/: init.go  keys.go  main.go  main_test.go  start.go
ControlPlane/deployments/docker/: Dockerfile.node  docker-compose.localnet.yaml
ControlPlane/internal/admin/: admin.go
ControlPlane/internal/config/: config.go  config_test.go  genesis.go  loader.go
ControlPlane/internal/consensus/: commit.go  engine.go  engine_test.go  evidence.go  proposal.go  qc.go  reactor.go  round.go  scenario_test.go  state.go  timeout.go  types.go  vote.go
ControlPlane/internal/crypto/: crypto_test.go  ed25519.go  hash.go
ControlPlane/internal/execution/: adapter.go  adapter_test.go  mock.go  sandbox.go
ControlPlane/internal/mempool/: cache.go  mempool.go  mempool_test.go  ordering.go  validation.go
ControlPlane/internal/node/: node.go  node_test.go  services.go
ControlPlane/internal/p2p/: discovery.go  gossip.go  host.go  metrics.go  p2p_test.go  peer_manager.go  protocol.go  rate_limiter.go  scoring.go  transport.go
ControlPlane/internal/rpc/: gateway.go  gateway_test.go  middleware.go  node_service.go  rpc_test.go  server.go
ControlPlane/internal/sync/: fetcher.go  snapshot.go  sync.go  sync_test.go  verifier.go
ControlPlane/internal/telemetry/: logger.go  metrics.go  telemetry_test.go
ControlPlane/internal/types/: block.go  hash.go  proposal.go  qc.go  types_test.go  validator.go  vote.go
ControlPlane/proto/bedrock/execution/v1/: execution.proto
ControlPlane/proto/bedrock/rpc/v1/: node.proto
ControlPlane/proto/bedrock/types/v1/: types.proto
ControlPlane/proto/execution/v1/: execution.proto
ControlPlane/proto/rpc/v1/: node.proto
ControlPlane/proto/types/v1/: types.proto
ControlPlane/scripts/: build.sh  chaos_byzantine.sh  chaos_partition.sh  lint.sh  localnet.sh  release.sh  test.sh
ExecutionCore/: Cargo.toml  README.md
ExecutionCore/engine/: Cargo.toml
ExecutionCore/engine/src/: executor.rs  host.rs  lib.rs  transaction.rs  validation.rs
ExecutionCore/primitives/: Cargo.toml
ExecutionCore/primitives/src/: block.rs  codec.rs  crypto.rs  error.rs  execution.rs  gas.rs  lib.rs  merkle.rs  state.rs  types.rs
ExecutionCore/wasm-guest/: Cargo.toml
ExecutionCore/wasm-guest/src/: exports.rs  host_bridge.rs  imports.rs  lib.rs
SandBox/: Cargo.toml  README.md
SandBox/hostapi/: Cargo.toml
SandBox/hostapi/src/: error.rs  gas_meter.rs  lib.rs  mem_store.rs  state_store.rs  traits.rs  types.rs
SandBox/sandbox/: Cargo.toml
SandBox/sandbox/src/: config.rs  error.rs  host_impl.rs  lib.rs  linker.rs  memory.rs  runtime.rs  validation.rs
SandBox/sandbox/tests/: determinism.rs  e2e.rs  gas_accounting.rs  golden_vectors.rs  resources.rs  state.rs
SandBox/sandbox/tests/common/: mod.rs
SandBox/sandbox/tests/vectors/: empty_block.json  multi_tx.json  single_transfer.json
cmd/: go.mod  main.go
core/: go.mod  service.go
core/models/: conn.go
middleware/: go.mod  go.sum
middleware/models/: configurations.go  conn.go  results.go
middleware/services/: load_manger.go  service.go
