[workspace]
members = ["hostapi", "sandbox"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Runtime
wasmtime = "29"

# Shared types from ExecutionCore
bedrock-primitives = { path = "../ExecutionCore/primitives", features = ["std"] }

# Internal
bedrock-hostapi = { path = "hostapi" }

# Error handling
anyhow = "1"
thiserror = "2"

# Cryptography
blake3 = "1"
ed25519-dalek = { version = "2", features = ["alloc"] }
