[package]
name = "bedrock-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BedRock Wasmtime-based WASM sandbox for deterministic execution"

[dependencies]
bedrock-hostapi = { workspace = true }
bedrock-primitives = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
